Fixed stretch-behind on mobile

--- a/themes/shared/assets/sass/shared/_utilities.scss
+++ b/themes/shared/assets/sass/shared/_utilities.scss
@@ -19,12 +19,10 @@
 
     &:before {
         content: '';
-        width: 1000%;
-        width: 200vw;
+        width: 500%;
         height: 100%;
         position: absolute;
-        left: -450%;
-        left: -50vw;
+        left: -225%;
         right: 0;
         top: 0;
         margin: 0 auto;
